# beestgraph

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LAUNCH_PROMPT.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: docs.md  graph.md  infrastructure.md  pipeline.md  web-ui.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent/prompts/: categorize.md  extract-entities.md  summarize.md
agent/skills/: add-entry.md  process-inbox.md  search-graph.md  wiki-compile.md  wiki-ingest.md  wiki-lint.md  wiki-query.md
config/: agent.toml  audit-recommendations.json  beestgraph.yml.example  mcp.json.example  taxonomy.yml  topic-tree.json
config/audit-executions/: agent1-3d-knowledge-graph-viewer.json  agent1-3d-knowledge-graph-viewer.output  agent1-3d-knowledge-graph-viewer.prompt  agent1-3d-knowledge-graph-viewer.sh  agent1-bks.json  agent1-bks.output  agent1-bks.prompt  agent1-bks.sh  agent1-llm-content-boundaries.json  agent1-llm-content-boundaries.output  agent1-llm-content-boundaries.prompt  agent1-llm-content-boundaries.sh  agent1-markdown-auto-formatter.json  agent1-markdown-auto-formatter.output  agent1-markdown-auto-formatter.prompt  agent1-markdown-auto-formatter.sh  (+125 more)
docker/: .env.example  docker-compose.dev.yml  docker-compose.yml
docs/: 3d-graph-viewer.md  AUDIT.md  RESUME.md  beestgraph-architecture.md  beestgraph-system.dot  beestgraph-template-spec.md  configuration.md  context-engine-workflow.md  keepmd-integration.md  markdown-styleguide.md  mcp-servers.md  obsidian-integration.md  parking-lot.md  qualification-pipeline.md  schema.md  setup-guide.md  troubleshooting.md  vault-schema-design.md  vision-agentic-network.md
scripts/: audit-claude  backup.sh  configure-mcp.sh  generate-bucket-list.py  generate-entertainment.py  init-schema.sh  install-claude-code.sh  load-secrets.sh  maintenance-cron.sh  mesh-daily-report.sh  migrate-vault-structure.py  process-keepmd.sh  refresh-bucket-list-moc.py  refresh-entertainment-mocs.py  review-claude  setup-1password.sh  setup-op-service-account.sh  setup.sh  wiki-claude
src/: __init__.py  config.py
(+161 files in other folders)
